styles/Card.module.css
.externalContainer {
  padding: 15px;
  background-color: var(--card-outline);
  height: 100%;
  width: 100%;
  border-radius: 20px;
}

.container {
  height: 100%;
  width: 100%;
  display: grid;
  border-radius: 20px;
  grid-template-rows: 3fr 6rem 2fr;
  grid-template-columns: 50px 1fr;
  grid-template-areas:
    "image image"
    "title title"
    "description description";
  position : relative;
}

.type {
  position: absolute;
  width: 70px;
  height: 70px;
  top: 30px;
  left: 30px;
  border-radius: 50%;
  padding: 5px;

  color: var(--text-contrast);
  border: 3px solid var(--card-dividers-color);
  background-color: var(--card-primary);
}

.image {
  /* min-height: 200px; */
  aspect-ratio: 1.5 / 1;
  grid-area: image;
  display: block;
  position: relative;
  transform: translateY(10px);
  background-color: var(--card-dividers-color);
  clip-path: ellipse(25% 50% at 50% 50%);
  width: 100%;
}
.image > span {
  width: calc(100% - 5px);
}
.image > span > img {
  background-color: var(--card-background);
  clip-path: ellipse(24% 48% at 50% 50%);
  object-fit: contain;
  image-rendering: -moz-crisp-edges; /* Firefox */
  image-rendering: -o-crisp-edges; /* Opera */
  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
  image-rendering: crisp-edges;
}

.title {
  transform: translateY(-30px);
  grid-area: title;
  width: 100%;
  position: relative;
  z-index: 500;
}
.title img {
  width: 100%;
  object-fit: fill;
  display: flex;
  align-items: center;
  justify-content: center;
  display: block;
  padding: 45px;
}
.title h1 {
  margin-top: 3px;
}
.title h1,
.title h2 {
  position: absolute;
  text-align: center;
  left: 50%;
  transform: translateX(-50%);
  color: var(--text-contrast);
  font-size: 1.8rem;
  font-weight: normal;
  width: 100%;
  z-index: 110;
}

.title h2 {
  font-size: 1rem;
  transform: translate(-50%, 2rem);
}

.smaller {
  transform: translateY(-35px);
}

.smaller h1 {
  margin-top: 5px;
  font-size: 1.2rem;
}

.description {
  transform: translateY(-5.5rem);
  aspect-ratio: 1 / 0.8;
  width: 90%;
  border: 3px solid var(--card-dividers-color);
  margin: 0.5rem 1.2rem 1rem 1.2rem;
  padding: 30px 13px 0px 13px;
  border-radius: 10px;
  grid-area: description;
  background-color: var(--card-background);
}

.description ul {
  padding: 0;
}
.description ul li {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}
.description ul li span {
  margin-right: 10px;
  font-size: 1.5rem;
  display: flex;
  align-items: center;
}
.description a {
  overflow: hidden;
  word-break: break-all;
}
.description a:hover {
  color: var(--card-primary);
}

.smallerFontSize {
  font-size: medium;
}

@media (max-width: 600px) {
  .smallerFontSize {
    font-size: small;
  }
}
@media (max-height: 800px) {
  .description {
    transform: translateY(-6.5rem);
    aspect-ratio: 1 / 0.85;
  }
  .title {
    transform: translateY(-3rem);
  }
}

/*
@media (prefers-color-scheme: dark) {

} 
*/

